mention json header in docs
