# docs/openapi.yml
@@ -18,6 +18,12 @@ paths:
           default: Token YOUR_API_KEY_HERE
         description: API key for authentication
         required: true
+      - in: header
+        name: Content-Type
+        schema:
+          type: string
+          default: application/json
+        required: true
       tags:
       - Bots
       requestBody:
@@ -64,6 +70,12 @@ paths:
           default: Token YOUR_API_KEY_HERE
         description: API key for authentication
         required: true
+      - in: header
+        name: Content-Type
+        schema:
+          type: string
+          default: application/json
+        required: true
       - in: path
         name: object_id
         schema:
@@ -103,6 +115,12 @@ paths:
           type: string
           default: Token YOUR_API_KEY_HERE
         description: API key for authentication
+        required: true
+      - in: header
+        name: Content-Type
+        schema:
+          type: string
+          default: application/json
         required: true
       - in: path
         name: object_id
@@ -144,6 +162,12 @@ paths:
           type: string
           default: Token YOUR_API_KEY_HERE
         description: API key for authentication
+        required: true
+      - in: header
+        name: Content-Type
+        schema:
+          type: string
+          default: application/json
         required: true
       - in: path
         name: object_id
